@@ -25,4 +25,4 @@ $(TARGET): $(objs)
 	$(LINK) $(LIBFLAGS)
 
 clean:
-	$(RM) $(objs) net_sf_colorer.ilc net_sf_colorer.ild net_sf_colorer.ilf net_sf_colorer.ils net_sf_colorer.map net_sf_colorer.tds
+	$(RM) $(objs) $(TARGET) net_sf_colorer.ilc net_sf_colorer.ild net_sf_colorer.ilf net_sf_colorer.ils net_sf_colorer.map net_sf_colorer.tds
